Issue INT-137 Language handling: - Edit tests